--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                 因为真正的关税已经够重了！
             </p>
             <div class="contract-box" onclick="copyContract()">
-                <span data-i18n="contract">CA: 0xT4r1ffP1tF0rTh3W1n</span>
+                <span data-i18n="contract">CA: 0x9f8a6efe8115657c1f82adebb61b44304da24444</span>
             </div>
         </section>
         
@@ -628,3 +628,4 @@
     </script>
 </body>
 </html>
+
