--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                 因为真正的关税已经够重了！
             </p>
             <div class="contract-box" onclick="copyContract()">
-                <span data-i18n="contract">CA: 0xT4r1ffP1tF0rTh3W1n</span>
+                <span data-i18n="contract">CA: 0x9f8a6efe8115657c1f82adebb61b44304da24444</span>
             </div>
         </section>
 
@@ -555,7 +555,7 @@
         <section class="exchange-links">
             <a href="https://pump.fun" target="_blank" class="exchange-card">
                 <h3>🚀 Pump.fun</h3>
-                <p data-i18n="pump_desc">主要购买平台</p>
+                <p data-i18n="Pankswpa_desc">主要购买平台</p>
             </a>
             <a href="https://raydium.io" target="_blank" class="exchange-card">
                 <h3>🦅 Raydium</h3>
@@ -743,3 +743,4 @@
     </script>
 </body>
 </html>
+
