--- a/index.html
+++ b/index.html
@@ -553,8 +553,8 @@
 
         <!-- 交易平台链接 -->
         <section class="exchange-links">
-            <a href="https://pump.fun" target="_blank" class="exchange-card">
-                <h3>🚀 Pump.fun</h3>
+            <a href="https://four.meme/zh-TW/token/0x9f8a6efe8115657c1f82adebb61b44304da24444" target="_blank" class="exchange-card">
+                <h3>🚀 Pankcace</h3>
                 <p data-i18n="Pankswpa_desc">主要购买平台</p>
             </a>
             <a href="https://raydium.io" target="_blank" class="exchange-card">
@@ -743,4 +743,5 @@
     </script>
 </body>
 </html>
+
 
