--- a/index.html
+++ b/index.html
@@ -554,12 +554,12 @@
         <!-- 交易平台链接 -->
         <section class="exchange-links">
             <a href="https://four.meme/zh-TW/token/0x9f8a6efe8115657c1f82adebb61b44304da24444" target="_blank" class="exchange-card">
-                <h3>🚀 Pankcace</h3>
-                <p data-i18n="Pankswpa_desc">主要购买平台</p>
+                <h3>🚀 four.meme</h3>
+                <p data-i18n="four.meme">主要购买平台</p>
             </a>
             <a href="https://raydium.io" target="_blank" class="exchange-card">
-                <h3>🦅 Raydium</h3>
-                <p data-i18n="raydium_desc">去中心化交易</p>
+                <h3>🦅 Pancake</h3>
+                <p data-i18n="Pancake_desc">去中心化交易</p>
             </a>
             <a href="https://dexscreener.com" target="_blank" class="exchange-card">
                 <h3>📊 DexScreener</h3>
@@ -743,5 +743,6 @@
     </script>
 </body>
 </html>
+
 
 
